--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="description">
           <h2>Blog post title</h2>
           <p>Here, add a short but appealing description of your blog post.</p>
-          <a href="https://medium.com/the-awl/i-may-not-harm-jeff-bezos-a4d322f17bd8" class="external-link" target="_blank" class="external-link" target="_blank">Read</a>
+          <a href="https://medium.com/p/92a7af9b8cb7/edit" class="external-link" target="_blank" class="external-link" target="_blank">Read</a>
         </div>
       </div>
 
@@ -39,7 +39,7 @@
       <div class="slidedown">
         <div class="description">
           <h2>Video title</h2>
-          <p>Add a short but appealing description of your video.</p>
+          <p>Placeholder text for now</p>
           <a href="#" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
@@ -48,7 +48,7 @@
       <div class="slidedown">
         <div class="description">
           <h2>Podcast title</h2>
-          <p>Add a short but appealing description of your podcast</p>
+          <p>Here we talk about if Tiktok's pipeline can radicalize their viewers!</p>
           <a href="#" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
@@ -60,7 +60,7 @@
     </div>
 
     <div class="links-container">
-      <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
+      <a href="www.linkedin.com/in/joshua-tesfamariam-902581255" class="button" target="_blank">LinkedIn</a>
     </div>
 
   </div>
