--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
     <div class="links-container">
       <a href="www.linkedin.com/in/joshua-tesfamariam-902581255" class="button" target="_blank">LinkedIn</a>
+      <a href="file:///C:/Users/jtesf/Downloads/Current%20Resume%20(2).pdf" class="button" target="_blank">Resume</a>
     </div>
 
   </div>
