--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- Add your name below -->
   <title>Josh T</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body class="main-text-color">
@@ -15,7 +18,7 @@
   <div class="container">
     <!-- Image and name container. Put your replacement photo—which you should crop to be square—in the images folder, then change the source attribute to images/yourportraitfilename.jpg. This path says, "Look in the images folder for yourportraitfilename.jpg." Be sure to change the alt text, too. -->
     <div class="image-container">
-      <img src="images/portrait.jpg" alt="Photo by Art Hauntington">
+      <img src="images/dc.jpg" alt="DC United Badge">
     </div>
     <div class="intro">
       I'm <span class="name"><strong>Joshua Tesfamariam</strong></span>, currently a Sophomore at Virginia Tech studying Computer Science.
@@ -49,7 +52,7 @@
         <div class="description">
           <h2>Podcast title</h2>
           <p>Here we talk about if Tiktok's pipeline can radicalize their viewers!</p>
-          <a href="#" class="external-link" target="_blank">Listen</a>
+          <a href="https://drive.google.com/file/d/1xTrH4jXJ1uz6k_LEGv-RMk20sGhFUSNn/view" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
     </div>
