--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <div class="slidedown">
         <div class="description">
           <h2>Video title</h2>
-          <p>Placeholder text for now</p>
-          <a href="#" class="external-link" target="_blank">Watch</a>
+          <p>Here, I made a video teaching how to perform the around-the-world!</p>
+          <a href="https://www.youtube.com/watch?v=fCl_l4jIv4E&ab_channel=TorChikin" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
 
